--- a/style/style.scss
+++ b/style/style.scss
@@ -1,16 +1,26 @@
 @import 'base/normalize';
+
+//Abstract
 @import 'abstract/constants';
 @import 'abstract/mixins';
 @import 'abstract/placeholders';
+@import 'abstract/columns';
+
+//Utilite
 @import 'utils/bonce';
 @import 'utils/scrollbar';
+
+//Base
 @import 'base/base';
 @import 'base/social';
 @import 'base/icons';
-@import 'abstract/columns';
 @import 'base/buttons';
+@import 'base/hamburger';
+
+//Layout
 @import 'layouts/wrapper';
 
+//Component
 @import 'components/header';
 @import 'components/feedback';
 @import 'components/menu';
@@ -20,4 +30,5 @@
 @import 'components/popup';
 @import 'components/form';
 
+//Page
 @import 'page/page-menu';
