--- a/style/abstract/_constants.scss
+++ b/style/abstract/_constants.scss
@@ -4,6 +4,8 @@ $color-light: #fffaf6;
 $color-text: #ffffff;
 
 $content-width: 1200px;
+$pc-small: 1366px;
+$media-laptop: 1024px;
 $tablet-width: 768px;
 $mobile-big-width: 414px;
 $mobile-small-width: 320px;
