--- a/style/abstract/_mixins.scss
+++ b/style/abstract/_mixins.scss
@@ -1,5 +1,5 @@
 // @include font($size, $height, $weight, $style);
-@mixin font ($size, $height:$size, $weight: normal, $style: normal) {
+@mixin font($size, $height: $size, $weight: normal, $style: normal) {
     font-size: $size;
     font-weight: $weight;
     font-style: $style;
@@ -11,13 +11,38 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-    >* {
+    > * {
         flex-basis: $width;
     }
 }
 
-@mixin appearancEffect ($transition1: 0.8s, $transition2: 0s, $opacity: 0, $translate1: 0px, $translate2: 120%) {
+@mixin appearancEffect($transition1: 0.8s, $transition2: 0s, $opacity: 0, $translate1: 0px, $translate2: 120%) {
     transform: translate($translate1, $translate2);
     transition: all $transition1 ease $transition2;
     opacity: $opacity;
+}
+@mixin media-pcsmall {
+    @media (max-width: $pc-small) {
+        @content;
+    }
+}
+@mixin media-laptop {
+    @media (max-width: $media-laptop) {
+        @content;
+    }
+}
+@mixin media-tablet {
+    @media (max-width: $tablet-width) {
+        @content;
+    }
+}
+@mixin media-mobile {
+    @media (max-width: $mobile-big-width) {
+        @content;
+    }
+}
+@mixin media-mobilesmall {
+    @media (max-width: $mobile-small-width) {
+        @content;
+    }
 }
