--- a/style/base/_icons.scss
+++ b/style/base/_icons.scss
@@ -3,31 +3,31 @@
     display: inline-block;
 
     &_region {
-        background-image: url("../../img/icons/region.svg");
+        background-image: url('../../img/icons/region.svg');
         width: 15px;
         height: 16px;
     }
 
     &_mail {
-        background-image: url("../../img/icons/mail.svg");
+        background-image: url('../../img/icons/mail.svg');
         width: 26px;
         height: 26px;
         margin-right: 8px;
     }
 
     &_phone {
-        background-image: url("../../img/icons/phone.svg");
+        background-image: url('../../img/icons/phone.svg');
         width: 26px;
         height: 26px;
         margin-right: 8px;
     }
     &_place {
-        background-image: url("../../img/icons/place.svg");
+        background-image: url('../../img/icons/place.svg');
         width: 20px;
         height: 20px;
     }
     &_arrow {
-        background-image: url("../../img/icons/up-arrow.svg");
+        background-image: url('../../img/icons/up-arrow.svg');
         width: 50px;
         height: 50px;
         transform: rotate(180deg);
@@ -50,6 +50,7 @@
 }
 
 .arrow-to-top {
+    z-index: 10;
     width: 50px;
     height: 50px;
     top: 80vh;
