--- a/style/base/_hamburger.scss
+++ b/style/base/_hamburger.scss
@@ -7,15 +7,15 @@
     height: 3px;
     width: 100%;
 }
-.hamburger {
+.hamburger,
+.hamburger-region {
+    cursor: pointer;
     display: none;
     margin: 20px;
     position: relative;
     width: 32px;
     height: 24px;
-    @include media-tablet {
-        display: inline-block;
-    }
+
     &:before {
         @extend %hamburger-line;
         top: 0;
@@ -27,8 +27,22 @@
         left: 0;
     }
 }
-.hamburger__line {
+.hamburger__line,
+.hamburger-region__line {
     @extend %hamburger-line;
     top: calc(50% - 1.5px);
     left: 0;
+}
+.hamburger {
+    @include media-tablet {
+        display: inline-block;
+    }
+}
+.hamburger-region {
+    @include media-laptop {
+        display: inline-block;
+    }
+    @include media-tablet {
+        display: none;
+    }
 }
