--- a/style/components/_feedback.scss
+++ b/style/components/_feedback.scss
@@ -1,15 +1,22 @@
 .feedback {
     padding: 50px 0 80px;
+    @include media-tablet-768 {
+        padding: 40px 0 40px;
+    }
 }
 
 .feedback__wrapper {
     text-align: center;
+    h2 {
+        @include media-laptop-1024 {
+            margin: 10px;
+        }
+    }
 }
 
-.feedback__layout {
+.feedback__layout-delivery {
     padding-top: 50px;
 }
-
 .feedback__links {
     display: inline-block;
     width: 560px;
@@ -18,6 +25,23 @@
     border-radius: 5px;
     @extend %transition;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    @include media-pcsmall-1366 {
+        width: 460px;
+        height: 250px;
+    }
+    @include media-laptop-1024 {
+        width: 350px;
+        height: 200px;
+    }
+    @include media-tablet-768 {
+        width: 380px;
+        height: 200px;
+        margin-bottom: 30px;
+    }
+    @include media-mobile-414 {
+        width: 300px;
+        height: 150px;
+    }
 }
 
 .link__to-menu {
