--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
     padding: 10px 0;
     color: $color-text;
-    @include media-laptop {
+    @include media-laptop-1024 {
         text-align: right;
     }
 }
@@ -11,18 +11,18 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    @include media-tablet {
+    @include media-tablet-768 {
         justify-content: space-between;
         padding: 3%;
     }
 }
 .header__region {
-    @include media-laptop {
+    @include media-laptop-1024 {
         display: none;
     }
 }
 .header__navigation {
-    @include media-tablet {
+    @include media-tablet-768 {
         display: none;
     }
 }
@@ -35,7 +35,7 @@
 .header__language {
     list-style-type: none;
     padding: 0 20px;
-    @include media-pcsmall {
+    @include media-pcsmall-1366 {
         padding: 0 8px;
     }
     a {
@@ -48,7 +48,7 @@
         letter-spacing: 0.2rem;
         @include font(1.4rem);
         line-height: 2rem;
-        @include media-pcsmall {
+        @include media-pcsmall-1366 {
             @include font(1.3rem);
         }
         &:hover {
@@ -104,7 +104,7 @@
 }
 
 .dropdown-content {
-    @include media-pcsmall {
+    @include media-pcsmall-1366 {
         left: -50px;
     }
     @extend %transition;
@@ -163,17 +163,25 @@
 .promo__title {
     text-align: center;
     padding-top: 20vh;
+    @include media-tablet-768 {
+        padding-top: 25vh;
+    }
 }
 
 .promo__title-year {
     @include font(1.4rem, 2.4rem);
     letter-spacing: 0.15rem;
     margin-bottom: 40px;
-
     @include appearancEffect();
-
     &._active {
         @include appearancEffect($translate2: 0px, $opacity: 1, $transition2: 0.5s);
+    }
+    @include media-tablet-768 {
+        margin-bottom: 30px;
+    }
+    @include media-mobile-414 {
+        margin-bottom: 15px;
+        @include font(1.2rem, 2rem);
     }
 }
 
@@ -187,14 +195,22 @@
     &._active {
         @include appearancEffect($translate2: 0px, $opacity: 1);
     }
-    @include media-pcsmall {
+    @include media-pcsmall-1366 {
         width: 600px;
         height: 90px;
         background-size: cover;
     }
-    @include media-laptop {
+    @include media-laptop-1024 {
         width: 500px;
         height: 75px;
+    }
+    @include media-tablet-768 {
+        width: 400px;
+        height: 60px;
+    }
+    @include media-mobile-414 {
+        width: 300px;
+        height: 45px;
     }
 }
 
@@ -208,8 +224,21 @@
     &._active {
         @include appearancEffect($translate2: 0px, $opacity: 1, $transition2: 0.5s);
     }
-    @include media-pcsmall {
+    @include media-pcsmall-1366 {
         @include font(2.2rem, $weight: 500);
+    }
+    @include media-laptop-1024 {
+        @include font(2.1rem, $weight: 500);
+    }
+    @include media-tablet-768 {
+        @include font(1.7rem, $weight: 500);
+        letter-spacing: 0.07rem;
+        padding-top: 30px;
+    }
+    @include media-mobile-414 {
+        @include font(1.4rem, $weight: 500);
+        letter-spacing: 0.05rem;
+        padding-top: 20px;
     }
 }
 
@@ -220,11 +249,14 @@
     top: 25vh;
     -webkit-animation: animation 3000ms linear both;
     animation: animation 3000ms linear both;
-    @include media-pcsmall {
+    @include media-pcsmall-1366 {
         width: 160px;
     }
-    @include media-laptop {
+    @include media-laptop-1024 {
         width: 120px;
+    }
+    @include media-tablet-768 {
+        top: 20vh;
     }
 }
 
