--- a/style/style.css
+++ b/style/style.css
@@ -375,8 +375,18 @@ a {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 1366px) {
+  .layout-2-column {
+    justify-content: space-around;
+  }
+}
 .layout-2-column > * {
   flex-basis: 49%;
+}
+@media (max-width: 768px) {
+  .layout-2-column > * {
+    flex-basis: 100%;
+  }
 }
 
 .layout-3-column {
@@ -384,8 +394,18 @@ a {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 1366px) {
+  .layout-3-column {
+    justify-content: space-around;
+  }
+}
 .layout-3-column > * {
   flex-basis: 30%;
+}
+@media (max-width: 768px) {
+  .layout-3-column > * {
+    flex-basis: 100%;
+  }
 }
 
 @-webkit-keyframes animation {
@@ -592,6 +612,22 @@ h2 {
   line-height: 3.8rem;
   color: #362823;
   text-transform: uppercase;
+}
+@media (max-width: 768px) {
+  h2 {
+    font-size: 3.6rem;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 3.6rem;
+  }
+}
+@media (max-width: 414px) {
+  h2 {
+    font-size: 3.4rem;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 3.4rem;
+  }
 }
 
 h3 {
@@ -816,9 +852,9 @@ ul.social__menu li a i.fa-odnoklassniki:hover::after {
   max-width: 1200px;
   margin: auto;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1366px) {
   .wrapper {
-    padding: 0 45px;
+    padding: 0 15px;
   }
 }
 
@@ -1007,6 +1043,11 @@ ul.social__menu li a i.fa-odnoklassniki:hover::after {
   text-align: center;
   padding-top: 20vh;
 }
+@media (max-width: 768px) {
+  .promo__title {
+    padding-top: 25vh;
+  }
+}
 
 .promo__title-year {
   font-size: 1.4rem;
@@ -1023,6 +1064,20 @@ ul.social__menu li a i.fa-odnoklassniki:hover::after {
   transform: translate(0px, 0px);
   transition: all 0.8s ease 0.5s;
   opacity: 1;
+}
+@media (max-width: 768px) {
+  .promo__title-year {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 414px) {
+  .promo__title-year {
+    margin-bottom: 15px;
+    font-size: 1.2rem;
+    font-weight: normal;
+    font-style: normal;
+    line-height: 2rem;
+  }
 }
 
 .promo__title-span {
@@ -1053,6 +1108,18 @@ ul.social__menu li a i.fa-odnoklassniki:hover::after {
     height: 75px;
   }
 }
+@media (max-width: 768px) {
+  .promo__title-span {
+    width: 400px;
+    height: 60px;
+  }
+}
+@media (max-width: 414px) {
+  .promo__title-span {
+    width: 300px;
+    height: 45px;
+  }
+}
 
 .promo__title-description {
   padding-top: 40px;
@@ -1079,6 +1146,34 @@ ul.social__menu li a i.fa-odnoklassniki:hover::after {
     line-height: 2.2rem;
   }
 }
+@media (max-width: 1024px) {
+  .promo__title-description {
+    font-size: 2.1rem;
+    font-weight: 500;
+    font-style: normal;
+    line-height: 2.1rem;
+  }
+}
+@media (max-width: 768px) {
+  .promo__title-description {
+    font-size: 1.7rem;
+    font-weight: 500;
+    font-style: normal;
+    line-height: 1.7rem;
+    letter-spacing: 0.07rem;
+    padding-top: 30px;
+  }
+}
+@media (max-width: 414px) {
+  .promo__title-description {
+    font-size: 1.4rem;
+    font-weight: 500;
+    font-style: normal;
+    line-height: 1.4rem;
+    letter-spacing: 0.05rem;
+    padding-top: 20px;
+  }
+}
 
 .gif {
   width: 200px;
@@ -1096,6 +1191,11 @@ ul.social__menu li a i.fa-odnoklassniki:hover::after {
 @media (max-width: 1024px) {
   .gif {
     width: 120px;
+  }
+}
+@media (max-width: 768px) {
+  .gif {
+    top: 20vh;
   }
 }
 
@@ -1138,12 +1238,22 @@ ul.social__menu li a i.fa-odnoklassniki:hover::after {
 .feedback {
   padding: 50px 0 80px;
 }
+@media (max-width: 768px) {
+  .feedback {
+    padding: 40px 0 40px;
+  }
+}
 
 .feedback__wrapper {
   text-align: center;
 }
+@media (max-width: 1024px) {
+  .feedback__wrapper h2 {
+    margin: 10px;
+  }
+}
 
-.feedback__layout {
+.feedback__layout-delivery {
   padding-top: 50px;
 }
 
@@ -1154,6 +1264,31 @@ ul.social__menu li a i.fa-odnoklassniki:hover::after {
   background-size: cover;
   border-radius: 5px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+@media (max-width: 1366px) {
+  .feedback__links {
+    width: 460px;
+    height: 250px;
+  }
+}
+@media (max-width: 1024px) {
+  .feedback__links {
+    width: 350px;
+    height: 200px;
+  }
+}
+@media (max-width: 768px) {
+  .feedback__links {
+    width: 380px;
+    height: 200px;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 414px) {
+  .feedback__links {
+    width: 300px;
+    height: 150px;
+  }
 }
 
 .link__to-menu {
@@ -1192,9 +1327,34 @@ ul.social__menu li a i.fa-odnoklassniki:hover::after {
   padding: 80px 0;
   background-color: #fecc16;
   background-image: url(../../img/bg_line-uzor_2.png), url(../../img/bg_line-uzor.png);
-  background-size: 120% 60px;
+  background-size: 120% 50px;
   background-repeat: no-repeat;
   background-position: top, bottom;
+}
+@media (max-width: 1366px) {
+  .menu {
+    background-size: 150% 50px;
+  }
+}
+@media (max-width: 1024px) {
+  .menu {
+    background-size: 210% 50px;
+  }
+}
+@media (max-width: 768px) {
+  .menu {
+    background-size: 350% 50px;
+  }
+}
+@media (max-width: 414px) {
+  .menu {
+    background-size: 480% 50px;
+  }
+}
+@media (max-width: 320px) {
+  .menu {
+    background-size: 520% 50px;
+  }
 }
 
 .menu__wrapper {
@@ -1219,6 +1379,12 @@ ul.social__menu li a i.fa-odnoklassniki:hover::after {
   transform: scale(0);
   transition: all 0.8s ease;
   opacity: 0;
+}
+@media (max-width: 414px) {
+  .menu__links {
+    width: 300px;
+    height: 170px;
+  }
 }
 .menu__links._active {
   transform: scale(1);
