--- a/style/abstract/_columns.scss
+++ b/style/abstract/_columns.scss
@@ -1,7 +1,7 @@
 .layout-2-column {
-    @include columns(49%)
+    @include columns(47%);
 }
 
 .layout-3-column {
-    @include columns(30%)
+    @include columns(30%);
 }
