--- a/style/base/_social.scss
+++ b/style/base/_social.scss
@@ -41,10 +41,24 @@ ul.social__menu {
                         animation: animate ease 0.6s forwards;
                     }
                 }
+                @include media-laptop-1024 {
+                    color: #fff;
+                    font-size: 18px;
+                    &::after {
+                        animation: animate ease 0.6s forwards;
+                    }
+                }
             }
             i.fa-facebook:hover {
                 &::after {
                     background-color: #3b5998;
+                }
+            }
+            i.fa-facebook {
+                @include media-laptop-1024 {
+                    &::after {
+                        background-color: #3b5998;
+                    }
                 }
             }
             i.fa-vk:hover {
@@ -52,14 +66,36 @@ ul.social__menu {
                     background-color: #00aced;
                 }
             }
+            i.fa-vk {
+                @include media-laptop-1024 {
+                    &::after {
+                        background-color: #00aced;
+                    }
+                }
+            }
+
             i.fa-instagram:hover {
                 &::after {
                     background-color: #8a3ab9;
                 }
             }
+            i.fa-instagram {
+                @include media-laptop-1024 {
+                    &::after {
+                        background-color: #8a3ab9;
+                    }
+                }
+            }
             i.fa-odnoklassniki:hover {
                 &::after {
                     background-color: #ff8800;
+                }
+            }
+            i.fa-odnoklassniki {
+                @include media-laptop-1024 {
+                    &::after {
+                        background-color: #ff8800;
+                    }
                 }
             }
         }
