--- a/style/components/_aboutUs.scss
+++ b/style/components/_aboutUs.scss
@@ -1,8 +1,13 @@
 .about-us {
-    padding: 120px 0;
+    padding: 60px 0;
     color: $color-text;
 }
-
+.about-us__wrapper {
+    text-align: center;
+    h2 {
+        padding-bottom: 30px;
+    }
+}
 .about-us__items {
     border-radius: 5px;
     text-align: center;
@@ -13,6 +18,7 @@
     align-items: center;
     flex-direction: column;
     position: relative;
+    margin-bottom: 15px;
 
     a,
     h3,
@@ -20,6 +26,18 @@
         @extend %transition;
         transform: translateY(20px);
         margin-top: 10px;
+        @include media-tablet-768 {
+            padding: 0 20px;
+        }
+    }
+    h3 {
+        @include media-tablet-768 {
+            @include font(2.6rem, $weight: bold);
+        }
+        @include media-mobile-414 {
+            @include font(2.4rem, $weight: bold);
+            padding: 0 20px;
+        }
     }
 
     button {
@@ -61,6 +79,12 @@
     &:hover::after {
         transform: scale(1);
     }
+    @include media-tablet-768 {
+        &:before,
+        &::after {
+            transform: scale(1);
+        }
+    }
 
     &:hover a,
     &:hover h3,
@@ -71,10 +95,21 @@
         visibility: visible;
         z-index: 10;
     }
+    @include media-tablet-768 {
+        a,
+        h3,
+        button,
+        span {
+            transform: translateY(0);
+            opacity: 1;
+            visibility: visible;
+            z-index: 10;
+        }
+    }
 }
 
 .about-us__work {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../../img/about_us_people.JPG');
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../../img/about_us_people.JPG') center;
     background-size: cover;
     @include appearancEffect($translate2: -20%, $translate1: 0);
 
