--- a/style/components/_map.scss
+++ b/style/components/_map.scss
@@ -5,24 +5,72 @@
     background-size: 120% 60px;
     background-repeat: no-repeat;
     background-position: top, bottom;
+    @include media-pcsmall-1366 {
+        background-size: 150% 50px;
+    }
+    @include media-laptop-1024 {
+        background-size: 210% 50px;
+    }
+    @include media-tablet-768 {
+        background-size: 350% 50px;
+    }
+    @include media-mobile-414 {
+        background-size: 480% 50px;
+    }
+    @include media-mobilesmall-320 {
+        background-size: 520% 50px;
+    }
 }
 .feedback__layout {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-gap: 20px;
     grid-template-rows: 1fr;
+    @include media-tablet-768 {
+        grid-template-columns: 1fr;
+    }
 }
 .contacts__item {
     display: grid;
     grid-template-columns: 1fr 20px;
     grid-template-rows: 1fr;
+    @include media-tablet-768 {
+        grid-template-columns: 1fr;
+    }
 }
 .map__wrapper {
     text-align: center;
 }
+.feedback__contacts > div:nth-child(1) {
+    @include appearancEffect($translate1: -100%, $translate2: 0%);
+}
+.feedback__contacts > div:nth-child(2) {
+    @include appearancEffect($translate1: -100%, $translate2: 0%);
+}
+.feedback__contacts > div:nth-child(3) {
+    transition: all 0.4s ease 1s;
+    transform: scale(0);
+    opacity: 0;
+}
+.feedback__contacts._active > div:nth-child(1) {
+    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1);
+}
+.feedback__contacts._active > div:nth-child(2) {
+    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1, $transition2: 0.3s);
+}
+.feedback__contacts._active > div:nth-child(3) {
+    transform: scale(1);
+    opacity: 1;
+}
 .map__yandex {
     width: 100%;
     height: 500px;
+    @include media-tablet-768 {
+        height: 350px;
+    }
+    @include media-mobile-414 {
+        height: 250px;
+    }
     @include appearancEffect($translate2: 20%, $translate1: 0);
     &._active {
         @include appearancEffect($translate2: 0px, $opacity: 1, $transition2: 0.1s);
@@ -36,6 +84,12 @@
     text-align: right;
     color: $color-brand-second;
     padding-bottom: 30px;
+    @include media-tablet-768 {
+        text-align: center;
+        span {
+            display: none;
+        }
+    }
     a {
         @include font(1.8rem);
         text-decoration: none;
@@ -54,9 +108,7 @@
 }
 
 .map__social-links {
-    *,
-    ::before,
-    ::after {
+    * {
         box-sizing: content-box;
     }
     h4 {
