--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -39,3 +39,10 @@ h3 {
     @include font(3.2rem, $weight: bold);
     color: $color-text;
 }
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+    select:focus,
+    textarea:focus,
+    input:focus {
+        font-size: 16px;
+    }
+}
