--- a/style/components/_popup.scss
+++ b/style/components/_popup.scss
@@ -10,6 +10,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     transition: all 0.8s ease 0s;
+    z-index: 10;
 }
 
 .popup.open {
@@ -36,6 +37,9 @@
     align-items: center;
     justify-content: center;
     padding: 30px 10px;
+    @include media-tablet-768 {
+        padding: 0;
+    }
 }
 
 .popup__content {
