--- a/style/base/_icons.scss
+++ b/style/base/_icons.scss
@@ -26,6 +26,11 @@
         width: 20px;
         height: 20px;
     }
+    &_question {
+        background-image: url('../../img/icons/1.svg');
+        width: 22px;
+        height: 22px;
+    }
     &_arrow {
         background-image: url('../../img/icons/up-arrow.svg');
         width: 50px;
