--- a/style/components/_map.scss
+++ b/style/components/_map.scss
@@ -41,14 +41,11 @@
 .map__wrapper {
     text-align: center;
 }
-.feedback__contacts > div:nth-child(1) {
+.feedback__contacts > div:nth-child(n) {
     @include appearancEffect($translate1: -100%, $translate2: 0%);
 }
-.feedback__contacts > div:nth-child(2) {
-    @include appearancEffect($translate1: -100%, $translate2: 0%);
-}
-.feedback__contacts > div:nth-child(3) {
-    transition: all 0.4s ease 1s;
+.feedback__contacts > div:last-child {
+    transition: all 0.4s ease 1.2s;
     transform: scale(0);
     opacity: 0;
 }
@@ -56,17 +53,38 @@
     @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1);
 }
 .feedback__contacts._active > div:nth-child(2) {
-    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1, $transition2: 0.3s);
+    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1, $transition2: 0.1s);
 }
 .feedback__contacts._active > div:nth-child(3) {
+    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1, $transition2: 0.2s);
+}
+.feedback__contacts._active > div:nth-child(4) {
+    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1, $transition2: 0.3s);
+}
+.feedback__contacts._active > div:nth-child(5) {
+    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1, $transition2: 0.4s);
+}
+.feedback__contacts._active > div:nth-child(6) {
+    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1, $transition2: 0.5s);
+}
+.feedback__contacts._active > div:nth-child(7) {
+    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1, $transition2: 0.6s);
+}
+.feedback__contacts._active > div:nth-child(8) {
+    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1, $transition2: 0.7s);
+}
+.feedback__contacts._active > div:nth-child(9) {
+    @include appearancEffect($translate1: 0%, $translate2: 0%, $opacity: 1, $transition2: 0.8s);
+}
+.feedback__contacts._active > div:last-child {
     transform: scale(1);
     opacity: 1;
 }
 .map__yandex {
     width: 100%;
-    height: 500px;
+    height: 700px;
     @include media-tablet-768 {
-        height: 350px;
+        height: 450px;
     }
     @include media-mobile-414 {
         height: 250px;
@@ -83,7 +101,7 @@
 .contacts__item {
     text-align: right;
     color: $color-brand-second;
-    padding-bottom: 30px;
+    padding-bottom: 15px;
     @include media-tablet-768 {
         text-align: center;
         span {
@@ -104,6 +122,12 @@
     }
     p {
         padding-bottom: 8px;
+        a {
+            @include font(1.6rem);
+            text-decoration: underline;
+            letter-spacing: 0.1rem;
+            color: $color-brand-second;
+        }
     }
 }
 
